--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,54 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar [mode]="gs.appMode" color="secondary">
     <ion-title>
-      Tab 1
+      Insta Bio
     </ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-segment scrollable color="primary" [mode]="gs.appMode" [(ngModel)]="binding" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="New">
+        <ion-label>New 2021</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="Famous">
+        <ion-label>Insta Famous</ion-label>
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row *ngIf="!data">
+      <ion-col size="12" *ngFor="let item of [1,2]">
+        <ion-card class="ion-no-margin">
+          <div class="ion-padding custom-skeleton">
+            <ion-skeleton-text animated style="width: 60%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 88%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 40%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 35%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 60%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 60%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 50%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 25%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated style="width: 70%;margin-bottom: 12px;"></ion-skeleton-text>
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </div>
+          
+          <ion-list>
+            <ion-list-header class="ion-no-padding">
+              <ion-skeleton-text animated style="width: 20%;height: 20px;margin: 5%;display: inline-flex;border-radius: 100px;"></ion-skeleton-text>
+              <ion-skeleton-text animated style="width: 20%;height: 20px;margin: 5%;display: inline-flex;border-radius: 100px;"></ion-skeleton-text>
+              <ion-skeleton-text animated style="width: 20%;height: 20px;margin: 5%;display: inline-flex;border-radius: 100px;"></ion-skeleton-text>
+              <ion-skeleton-text animated style="width: 20%;height: 20px;margin: 5%;display: inline-flex;border-radius: 100px;"></ion-skeleton-text>
+            </ion-list-header>
+          </ion-list>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row  *ngIf="data">
+      <ion-col size="12">
+        <p>Paras</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
